--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>vue</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript">
-    	console.log("嗨咯 沃德!")
-    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
